# Kvasir

./: .gitignore  README.md  hsvmask.h  ideasNreminders  instructions_for_SMMCGUI  novo
AI/: CMakeLists.txt  ai.cpp  ai.hpp  aiconstants.h  fieldloader.cpp  fieldloader.hpp  geometry.cpp  geometry.h  kbhit.cpp  kbhit.h  main.cpp  modes.cpp  modes.hpp  strategy.cpp  strategy.hpp  velocity.h
AI-build/: AI  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Bifrost Set/Mouse Client/: MemoryClient.cpp  MemoryClient.cpp~  MemoryClient.h  MemoryClient.h~  Mouse Client.cbp  Mouse Client.depend  Mouse Client.layout  MousePointer.cpp  Principal.h  RobotMsg.h  main.cpp
BoostSerializationTest/: CMakeLists.txt
Documentation/: Habrok.asta  SMMCGUI.asta  Transmissor.asta  Transmitter.asta  Vard.asta  Vor.asta  freebot.asta  new_Vard.asta
Documentation/Board with FIO/: eagle.epf  schematic.b#1  schematic.b#2  schematic.b#3  schematic.b#4  schematic.b#5  schematic.b#7  schematic.b#8  schematic.b#9  schematic.drd  schematic.s#1  schematic.s#2  schematic.s#3  schematic.s#4  schematic.sch  schematic_00.job  schematic_00.pro  schematic_01.job  schematic_02.job  schematic_03.job  schematic_04.job  schematic_05.job  schematic_05.pro  schematic_06.job  schematic_06.pro  schematic_07.job  schematic_08.job  schematic_09.job  schematic_10.job  schematic_10.pro  schematic_11.job  schematic_12.job  schematic_12.pro  schematic_13.job  schematic_14.job  schematic_14.pro  schematic_15.job  schematic_15.pro
Documentation/Board with NANO/: eagle.epf  schematic.b#2  schematic.b#3  schematic.b#4  schematic.b#5  (+10 more)
Habrok/: CMakeLists.txt
Habrok/forms/: mainwindow.ui
Habrok/include/: habrok.hpp  habrokconstants.h  hsvmask.hpp  imageprocessing.hpp  imageprocessingsettings.hpp  imageprocessingthread.hpp  mainwindow.hpp  robotrecognizer.hpp  robotrecognizerthread.hpp  visionfieldhandler.hpp
Habrok/source/: CMakeLists.txt  habrok.cpp  imageprocessing.cpp  imageprocessingsettings.cpp  imageprocessingthread.cpp  main.cpp  mainwindow.cpp  robotrecognizer.cpp  robotrecognizerthread.cpp  visionfieldhandler.cpp
InterprocessVectorTest/: CMakeLists.txt
InterprocessVectorTest/source/: CMakeLists.txt  main.cpp
Mouse Client/: CMakeLists.txt  MemoryClient.cpp  MemoryClient.h  MousePointer.h  Principal.h  main.cpp
ObRo/: CMakeLists.txt  colorobject.h  entity.h  field.h  fieldholder.cpp  fieldholder.hpp  kbhit.h  main.cpp  objectlist.cpp  objectlist.hpp  obro.cpp  obro.hpp  obroconstants.h
ObRo-build/: CMakeCache.txt  Makefile  ObRo  cmake_install.cmake  compile_commands.json
ObRoDecoder/: CMakeLists.txt  colorobject.h  fieldholder.cpp  fieldholder.hpp  main.cpp  objectlist.cpp  objectlist.hpp  obro.cpp  obroconstants.h
QThreadTest/: CMakeLists.txt
QThreadTest/source/: CMakeLists.txt  main.cpp  thread.cpp
SMMCGUI/: CMakeLists.txt  smmcgui.sh
SMMCGUI/forms/: mainwindow.ui  ol_test_mainwindow.ui
SMMCGUI/include/: CMakeLists.txt  SMMCGUI.hpp
SMMCGUI/include/GUI/: guiconstants.h  mainwindow.hpp
SMMCGUI/include/SMMC/: CMakeLists.txt  aifield.hpp  coloredobject.hpp  coord.hpp  entity.hpp  field.hpp  interprocessvariabledefinitions.hpp  movement.hpp  player.hpp  sharedparameters.hpp  smmcconstants.h  smmclib.hpp  smmclib.pc.in  smmcthread.hpp  visionconstants.h  visionfield.hpp
SMMCGUI/source/: CMakeLists.txt  SMMCGUI.cpp  main.cpp
SMMCGUI/source/GUI/: mainwindow.cpp
SMMCGUI/source/SMMC/: sharedparameters.cpp  smmcthread.cpp
Transmissor/: Buffer.cpp  Principal.cpp  Principal.h  Radio.cpp  RadioWriter.cpp  RadioWriter.h  SerialCommunication.cpp  SerialCommunication.h  TransConstants.h  Transmissor.ino
Transmitter/: Buffer.h  Principal.cpp  Principal.h  Radio.cpp  Radio.h  SerialCommunication.cpp  SerialCommunication.h  Transmitter.ino
Vard/: CMakeLists.txt  Principal.cpp  Principal.h  ServerConstantes.h  ServerConstantes.h~  main.cpp
Vard/include/: Robot.hpp  SerialCommunication.hpp  Vard.hpp  VardConstants.h  VelocitiesLoader.hpp
Vard/listaEncadeada/: ListaRobos.cpp  ListaRobos.h  Robo.cpp  Robo.h  RobotMsg.h  VelocitiesLoader.cpp
Vard/radio/: Radio.cpp  Radio.h  SerialPacket.cpp  SerialPacket.h
Vard/relacaoRobos/: RELACAO.txt  RelacaoRobos.cpp  RelacaoRobos.h
Vard/source/: CMakeLists.txt  Robot.cpp  SerialCommunication.cpp  Vard.cpp  VelocitiesLoader.cpp  main.cpp
Vision/: CMakeLists.txt  SightedObjects.hpp.autosave  Vision.pro  colormasks.cpp  colormasks.hpp  colormasks.msk  framesholder.cpp  framesholder.hpp  hsvmask.h  main.cpp  sightedobject.h  sightedobjects.cpp  sightedobjects.hpp  vision.cpp  vision.hpp  visionconstants.h
Vision-build/: CMakeCache.txt  Makefile  Vision  cmake_install.cmake  compile_commands.json
Vor/: CMakeLists.txt
Vor/source/: CMakeLists.txt  aifieldhandler.cpp  main.cpp  strategy.cpp  vor.cpp
build-ObRoDecoder-Desktop-Default/: CMakeCache.txt  Makefile  ObRoDecoder  ObRoDecoder.cbp  cmake_install.cmake
build-Vision-Desktop-Debug/: Makefile  Vision  colormasks.msk  colormasks.msk~
build-Vision-Desktop-Default/: CMakeCache.txt  Makefile  Vision  Vision.cbp  cmake_install.cmake  colormasks.msk  colormasks.msk~
freeBot/: BotConstantes.h  BotConstants.h  Buffer.cpp  Buffer.h  Buffer.hpp  Comunicacao.cpp  Comunicacao.h  Constantes.h  ConstantesRobo2.h~  EspinhaDorsal.cpp  EspinhaDorsal.h  Hardware.cpp  Hardware.h  Movimentacao.cpp  Movimentacao.h  Principal.cpp  Principal.h  Principal.hpp  RFreceiver.cpp  RFreceiver.h  RFreceiver.hpp  Radio.cpp  Radio.h  Radio.hpp  Robot.cpp  Robot.hpp  RotaryServoMotor.cpp  RotaryServoMotor.hpp  ServoRotativo.cpp  ServoRotativo.h  Software.cpp  Software.h  VarSpeedServo.cpp  XbeeAPI.cpp  XbeeAPI.h  XbeeRobo.cpp  XbeeRobo.h  freeBot.ino
freeBot_xbee/: BotConstantes.h  Comunicacao.cpp  Comunicacao.h  EspinhaDorsal.cpp  Hardware.cpp  Hardware.h  Principal.cpp  ServoRotativo.cpp  ServoRotativo.h  Software.h  XbeeRobo.cpp  XbeeRobo.h  freeBot.ino
interprocess/: Jamroot
new_Vard/: CMakeLists.txt
qtCMake/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
qtTest/: mainwindow.ui  qtTest.pro
(+72 files in other folders)
